Alterações do Layout issue #4
ALterações solicitadas junto ao cliente (frank)
alinhamento de conteudo
alteraçao da semantica
fix bugs

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -33,7 +33,7 @@ body {
 /* Page Sections */
 .section,
 .section-colored {
-  padding: 50px 0px 0px 0px;
+  padding: 50px 20px;
 }
 
 .section-colored {
